--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ git:
   submodules: false
 script:
   - >
-    mkdir ~/inst && ./configure --prefix ~/inst --enable-debug-runtime &&
+    mkdir ~/inst &&
+    ./configure --prefix ~/inst --enable-debug-runtime ${CONFIG_ARG} &&
     make -j4 world.opt &&
     make -C testsuite all-enabled
 
@@ -32,5 +33,9 @@ matrix:
     env:
     - USE_RUNTIME: d
     - OCAMLRUNPARAM: v=0,V=1
+  - compiler: gcc
+    os: linux
+    env:
+    - CONFIG_ARG: --enable-flambda
   - compiler: clang
     os: osx
