--- a/tools/eventlog_metadata.in
+++ b/tools/eventlog_metadata.in
@@ -132,7 +132,10 @@ enum gc_phase : uint16_t {
     "stw_handler",
     "stw_leader",
     "major_finish_sweeping",
-    "minor_finalizers_admin"
+    "minor_finalizers_admin",
+    "stw/leader_broadcast",
+    "stw/leader_barrier",
+    "spin_wait/sleep"
 };
 
 /*
